hphp/hack/test/typecheck/genericarguments/generic_new_bad_arity.php.exp
File "generic_new_bad_arity.php", line 9, characters 12-12:
Wrong number of type arguments (expected 2, got 1) (Typing[4101])
File "generic_new_bad_arity.php", line 4, characters 7-7:
Definition is here
